@@ -3,9 +3,7 @@ package com.example.spring_mvc_lab1.service;
 import com.example.spring_mvc_lab1.model.Product;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -14,7 +12,6 @@ public class ProductService {
     private final List<Product> products = new ArrayList<>();
 
     public ProductService() {
-        // Data dummy — nanti akan diganti database di Week JPA
         products.add(new Product(1L, "Laptop ASUS", "Elektronik", 12_500_000, 15));
         products.add(new Product(2L, "Mouse Logitech", "Elektronik", 350_000, 50));
         products.add(new Product(3L, "Buku Java Programming", "Buku", 150_000, 30));
@@ -51,21 +48,54 @@ public class ProductService {
     }
 
     // =========================
-    // UNTUK EKSPERIMEN 4B
+    // STATISTICS METHODS
     // =========================
 
+    // Total semua produk
+    public long getTotalProducts() {
+        return products.size();
+    }
+
+    // Total produk per kategori
+    public Map<String, Long> getTotalPerCategory() {
+        return products.stream()
+                .collect(Collectors.groupingBy(
+                        Product::getCategory,
+                        Collectors.counting()
+                ));
+    }
+
+    // Produk termahal
+    public Optional<Product> getMostExpensiveProduct() {
+        return products.stream()
+                .max(Comparator.comparingDouble(Product::getPrice));
+    }
+
+    // Produk termurah
+    public Optional<Product> getCheapestProduct() {
+        return products.stream()
+                .min(Comparator.comparingDouble(Product::getPrice));
+    }
+
+    // Rata-rata harga
+    public double getAveragePrice() {
+        return products.stream()
+                .mapToDouble(Product::getPrice)
+                .average()
+                .orElse(0.0);
+    }
+
+    // Jumlah stok < 20
+    public long countLowStockProducts() {
+        return products.stream()
+                .filter(p -> p.getStock() < 20)
+                .count();
+    }
     // Ambil semua kategori unik
     public List<String> getAllCategories() {
         return products.stream()
                 .map(Product::getCategory)
                 .distinct()
-                .collect(Collectors.toList());
-    }
-
-    // Hitung jumlah produk per kategori
-    public long countByCategory(String category) {
-        return products.stream()
-                .filter(p -> p.getCategory().equalsIgnoreCase(category))
-                .count();
+                .toList();
     }
 }
